# my_writing_system

./: .coverage  .dockerignore  .env.example  .gitignore  DEBUG.md  DEPLOY.md  Dockerfile  PROGRESS.md  README.md  RESUME_DRAFT.md  TECH_DEBT.md  architecture-overview.html  docker-compose.yml  pack.sh  persistence.js  pyproject.toml  requirements.txt  start.bat  start.ps1
app/: ai_artifact_detector.py  blackboard.py  celery_app.py  character_relation_store.py  character_store.py  config.py  coordinator.py  dependencies.py  event_store.py  experience_timeline.py  extraction_validator.py  faction_store.py  foreshadowing_store.py  item_manager.py  main.py  map_manager.py  memory_fuser.py  models.py  narrative_event.py  project_store.py  repetition_checker.py  rule_checks.py  rule_store.py  subplot_manager.py  task_store.py  vector_store.py  world_state.py
app/agents/: base.py  card_drawer.py  character_formatter.py  character_manager.py  context_manager.py  continuity_editor.py  dialogue_agent.py  planner.py  reviewer.py  style_analyzer.py  writer.py
app/embedding/: base.py  factory.py  ollama_provider.py  openai_provider.py  sentence_transformer_provider.py
app/routers/: ai_detect.py  analysis.py  cards.py  character_relations.py  characters.py  dialogue.py  experience.py  factions.py  foreshadowings.py  generate.py  history.py  items.py  map.py  pages.py  projects.py  rules.py  style.py  subplots.py  tasks.py
app/static/: index.html
app/utils/: endpoint_helpers.py  json_parser.py  (+6 more)
docs/: style-analyzer-upgrade.md
tests/: conftest.py  test_prompt_engineering.py
(+34 files in other folders)
