[project]
name = "my-writing-system"
version = "0.9.0"
description = "Multi-agent collaborative writing system with RAG, using BGE-M3 embeddings and DeepSeek V4 Pro"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "fakeredis[lua]>=2.21",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
